// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cells with html renders a table with colgroups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      aria-owns="id_listbox"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="foo"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="bar"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="foo"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="bar"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="foo"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="bar"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns as names only renders a table as the list box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      aria-owns="id_listbox"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
          <tr
            aria-disabled="true"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_tomato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Tomato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns with headers renders a table with headers 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      aria-owns="id_listbox"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__listbox--header"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          role="presentation"
        >
          <tr
            role="presentation"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-header"
            >
              Name
            </th>
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-header"
            >
              Type
            </th>
          </tr>
        </thead>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Name 
              </span>
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Type 
              </span>
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Name 
              </span>
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Type 
              </span>
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Name 
              </span>
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Type 
              </span>
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns with html renders a table with colgroups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      aria-owns="id_listbox"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col
            class="foo"
          />
          <col
            class="bar"
          />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`grouped renders a table with groups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      aria-owns="id_listbox"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-group-header"
              colspan="2"
            >
              Fruit
            </th>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Fruit 
              </span>
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Green
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Fruit 
              </span>
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Yellow
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-group-header"
              colspan="2"
            >
              Vegetable
            </th>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              <span
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Vegetable 
              </span>
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              role="presentation"
            >
              Brown
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
